# libft

./: Makefile  meson.build
includes/: get_next_line.h  libft.h  meson.build
srcs/mem/: ft_bzero.c  ft_memchr.c  ft_memset.c
srcs/stdio/printf/: ft_printf.c  ft_printf_putnbr.c  ft_printf_putstr.c  internal_ft_printf.h
srcs/stdlib/: ft_atoi_base.c  ft_itoa_buffer.c  ft_vecb.c
srcs/stdlib/gnl/: get_next_line.c
srcs/str/: ft_check_chrs.c
